--- a/client/src/partials/headers/Main.module.scss
+++ b/client/src/partials/headers/Main.module.scss
@@ -1,9 +1,9 @@
 .box {
 	background-color: var(--mantine-color-pri-6);
-	color: var(--mantine-color-white);
+	color: var(--mantine-color-dark-9);
 	padding: calc(var(--mantine-spacing-xs) / 2) 0;
 	font-size: var(--mantine-font-size-sm);
-	font-weight: 500;
+	font-weight: bold;
 }
 
 .link {
