--- a/client/src/partials/navs/Main.module.scss
+++ b/client/src/partials/navs/Main.module.scss
@@ -1,6 +1,6 @@
 .box {
 	background-color: var(--mantine-color-body);
-	// border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-3));
+	border-bottom: 1px solid var(--mantine-color-pri-6);
 	padding: var(--mantine-spacing-xs) 0;
 }
 
