--- a/client/src/components/breadcrumbs/Hero.module.scss
+++ b/client/src/components/breadcrumbs/Hero.module.scss
@@ -2,7 +2,7 @@
 	text-decoration: none;
 	font-size: var(--mantine-font-size-md);
 	font-weight: 500;
-	color: light-dark(var(--mantine-color-dark-9), var(--mantine-color-dark-0));
+	color: light-dark(var(--mantine-color-dark-9), var(--mantine-color-white));
 	transition: 0.25s all ease;
 
 	&:hover {
