--- a/client/src/components/card/Partner.module.scss
+++ b/client/src/components/card/Partner.module.scss
@@ -1,7 +1,7 @@
 .card {
 	background-color: light-dark(var(--mantine-color-gray-light));
-	padding: var(--mantine-spacing-xl);
 	border-radius: var(--mantine-radius-md);
+	overflow: hidden;
 	height: 100%;
 	position: relative;
 
