--- a/client/src/components/accordion/Program.module.scss
+++ b/client/src/components/accordion/Program.module.scss
@@ -1,9 +1,18 @@
+.item {
+	border-bottom: 0px solid light-dark(var(--mantine-color-pri-light), var(--mantine-color-gray-light));
+	margin-bottom: calc(var(--mantine-spacing-xs) / 2);
+}
+
 .control {
-	background-color: var(--mantine-color-dark-6);
+	background-color: light-dark(var(--mantine-color-pri-6), var(--mantine-color-pri-light));
+	color: light-dark(var(--mantine-color-white), var(--mantine-color-white));
+	border-top-left-radius: var(--mantine-radius-sm);
+	border-top-right-radius: var(--mantine-radius-sm);
 	transition: 0.25s all ease;
 
 	&:hover {
-		color: var(--mantine-color-pri-6);
+		background-color: light-dark(var(--mantine-color-sec-6), var(--mantine-color-sec-light));
+		color: light-dark(var(--mantine-color-pri-6), var(--mantine-color-sec-6));
 	}
 }
 
@@ -13,5 +22,11 @@
 
 .content {
 	padding: var(--mantine-spacing-md) 0;
-	background-color: var(--mantine-color-sec-light);
+	border-bottom-left-radius: var(--mantine-radius-sm);
+	border-bottom-right-radius: var(--mantine-radius-sm);
+	background-color: light-dark(var(--mantine-color-pri-light), var(--mantine-color-pri-light));
+}
+
+.panel {
+	padding: 0 var(--mantine-spacing-lg);
 }
