--- a/client/src/components/card/Audience.module.scss
+++ b/client/src/components/card/Audience.module.scss
@@ -1,6 +1,6 @@
 .card {
 	padding: var(--mantine-spacing-xl);
-	border-bottom: 2px solid var(--mantine-color-sec-6);
+	border-bottom: 2px solid light-dark(var(--mantine-color-pri-6), var(--mantine-color-sec-6));
 	height: 100%;
 	transition: 0.25s all ease;
 
@@ -11,12 +11,12 @@
 		cursor: pointer;
 
 		.icon {
-			color: var(--mantine-color-white);
+			color: light-dark(var(--mantine-color-sec-6), var(--mantine-color-white));
 		}
 	}
 }
 
 .icon {
-	color: var(--mantine-color-pri-6);
+	color: light-dark(var(--mantine-color-pri-6), var(--mantine-color-pri-6));
 	transition: 0.25s all ease;
 }
