--- a/client/src/components/card/Booth.module.scss
+++ b/client/src/components/card/Booth.module.scss
@@ -1,5 +1,5 @@
 .card {
-	background-color: var(--mantine-color-dark-6);
+	background-color: light-dark(var(--mantine-color-pri-light), var(--mantine-color-dark-6));
 	border: 2px dashed var(--mantine-color-dark-3);
 	border-radius: var(--mantine-radius-md);
 	padding: var(--mantine-spacing-xl);
@@ -8,6 +8,10 @@
 	transition: 0.25s all ease;
 
 	&:hover {
-		border: 2px dashed var(--mantine-color-pri-6);
+		border: 2px dashed light-dark(var(--mantine-color-pri-6), var(--mantine-color-sec-6));
 	}
+}
+
+.icon {
+	color: light-dark(var(--mantine-color-pri-6), var(--mantine-color-sec-6));
 }
