--- a/client/src/components/card/Objective.module.scss
+++ b/client/src/components/card/Objective.module.scss
@@ -1,5 +1,5 @@
 .card {
-	background-color: var(--mantine-color-dark-6);
+	background-color: light-dark(var(--mantine-color-sec-6), var(--mantine-color-dark-6));
 	border-radius: var(--mantine-radius-md);
 	padding: var(--mantine-spacing-xl);
 	box-shadow: var(--mantine-shadow-xs);
@@ -11,4 +11,8 @@
 		cursor: pointer;
 		border: 2px dashed var(--mantine-color-pri-6);
 	}
+}
+
+.icon {
+	color: light-dark(var(--mantine-color-pri-6), var(--mantine-color-sec-6));
 }
