--- a/client/src/partials/footers/Main.module.scss
+++ b/client/src/partials/footers/Main.module.scss
@@ -1,6 +1,12 @@
 .footer {
+	background-color: light-dark(var(--mantine-color-pri-6), var(--mantine-color-body));
+	color: light-dark(var(--mantine-color-white), inherit);
 	padding: var(--mantine-spacing-xl) 0;
 	border-top: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-3));
+}
+
+.title {
+	color: light-dark(var(--mantine-color-sec-6), var(--mantine-color-pri-6));
 }
 
 .link {
