--- a/client/src/partials/navs/Main.module.scss
+++ b/client/src/partials/navs/Main.module.scss
@@ -1,13 +1,14 @@
 .box {
-	background-color: var(--mantine-color-body);
-	border-bottom: 1px solid var(--mantine-color-pri-6);
+	background-color: light-dark(var(--mantine-color-pri-6), var(--mantine-color-dark-6));
+	color: var(--mantine-color-dark-0);
+	border-bottom: 1px solid light-dark(var(--mantine-color-sec-6), var(--mantine-color-pri-6));
 	padding: var(--mantine-spacing-xs) 0;
 }
 
 .link {
 	padding: var(--mantine-spacing-md) 0;
 	text-decoration: none;
-	color: light-dark(var(--mantine-color-dark-3), var(--mantine-color-dark-0));
+	color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-0));
 	font-size: var(--mantine-font-size-sm);
 	font-weight: 500;
 	transition: 0.25s all ease;
@@ -18,6 +19,6 @@
 	}
 
 	&:hover {
-		color: light-dark(var(--mantine-color-pri-6), var(--mantine-color-pri-6));
+		color: light-dark(var(--mantine-color-sec-6), var(--mantine-color-pri-6));
 	}
 }
