Improve form functionality

--- a/client/src/components/inputs/Text.module.scss
+++ b/client/src/components/inputs/Text.module.scss
@@ -1,6 +1,6 @@
 .input {
 	border: 0px solid transparent;
-	border-radius: var(--mantine-radius-xl);
+	border-radius: var(--mantine-radius-sm);
 	background-color: light-dark(var(--mantine-color-pri-light), var(--mantine-color-gray-light));
 	padding: 0 var(--mantine-spacing-md);
 }
