--- a/client/src/components/inputs/Select.module.scss
+++ b/client/src/components/inputs/Select.module.scss
@@ -1,6 +1,6 @@
 .input {
 	border: 0px solid transparent;
-	border-radius: var(--mantine-radius-xl);
+	border-radius: var(--mantine-radius-sm);
 	background-color: light-dark(var(--mantine-color-pri-light), var(--mantine-color-gray-light));
 	padding: 0 var(--mantine-spacing-md);
 }
@@ -25,7 +25,7 @@
 }
 
 .option {
-	border-radius: var(--mantine-radius-xl);
+	border-radius: var(--mantine-radius-sm);
 	color: light-dark(var(--mantine-color-body), inherit);
 
 	&:hover {
