--- a/client/src/partials/navs/Main.module.scss
+++ b/client/src/partials/navs/Main.module.scss
@@ -11,6 +11,7 @@
 	color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-0));
 	font-size: var(--mantine-font-size-sm);
 	font-weight: 500;
+	text-decoration: none;
 	transition: 0.25s all ease;
 
 	@media (max-width: $mantine-breakpoint-md) {
@@ -25,4 +26,22 @@
 
 .drawerBody {
 	background-color: light-dark(var(--mantine-color-pri-6), var(--mantine-color-dark-6));
+}
+
+.menuDropdown {
+	padding: 0;
+}
+
+.menuItem {
+	border-radius: 0;
+
+	&:hover {
+		.link {
+			color: var(--mantine-color-pri-6);
+		}
+	}
+}
+
+.menuItemLabel {
+	text-decoration: none;
 }
