--- a/client/src/components/card/speaker/Listing.module.scss
+++ b/client/src/components/card/speaker/Listing.module.scss
@@ -31,7 +31,8 @@
 .title {
 	color: light-dark(var(--mantine-color-sec-6), var(--mantine-color-sec-6));
 	font-weight: bold;
-	font-size: var(--mantine-font-size-xl);
+	font-size: var(--mantine-font-size-md);
+	text-transform: uppercase;
 }
 
 .imageContainer {
