--- a/client/src/components/card/speaker/Listing.module.scss
+++ b/client/src/components/card/speaker/Listing.module.scss
@@ -29,7 +29,7 @@
 }
 
 .title {
-	color: light-dark(var(--mantine-color-sec-6), var(--mantine-color-pri-6));
+	color: light-dark(var(--mantine-color-sec-6), var(--mantine-color-sec-6));
 	font-weight: bold;
 	font-size: var(--mantine-font-size-md);
 	text-transform: uppercase;
